--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "android-egui-ext"
 version = "0.1.0"
 edition = "2024"
-
 [dependencies]
+catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
 anyhow = "1.0.100"
 egui = { version = "0.33.3", features = ["serde"] }
 egui_glow = { version = "*", default-features = false }
